<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        xmlns:toolbar="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        toolbar:titleTextAppearance="@style/MP.Theme.TextAppearance.Light.Toolbar.Title"
        toolbar:title="EQ."/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <CheckBox android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            />

        <Button android:id="@+id/flat"
            android:layout_height="25dp"
            android:layout_width="wrap_content"
            android:text="@string/flat"
            android:background="@drawable/button_gradient"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="-15db"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0db"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:text="+15db"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <SeekBar android:id="@+id/slider_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:thumb="@drawable/custom_seekbar_thumb"
                android:progressTint="@color/red_dim"
                android:secondaryProgress="50" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:id="@+id/slider_label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Label"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/slider_level_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:text="level"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <SeekBar android:id="@+id/slider_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:thumb="@drawable/custom_seekbar_thumb"
                android:progressTint="@color/red_dim"
                android:secondaryProgress="50" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:id="@+id/slider_label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Label"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/slider_level_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:text="level"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <SeekBar android:id="@+id/slider_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:thumb="@drawable/custom_seekbar_thumb"
                android:progressTint="@color/red_dim"
                android:secondaryProgress="50" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:id="@+id/slider_label_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Label"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/slider_level_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:text="level"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <SeekBar android:id="@+id/slider_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:thumb="@drawable/custom_seekbar_thumb"
                android:progressTint="@color/red_dim"
                android:secondaryProgress="50" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:id="@+id/slider_label_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Label"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/slider_level_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:text="level"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <SeekBar android:id="@+id/slider_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:thumb="@drawable/custom_seekbar_thumb"
                android:progressTint="@color/red_dim"
                android:secondaryProgress="50" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:id="@+id/slider_label_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Label"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/slider_level_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:text="level"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/bass_boost_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bass_boost"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <com.musicplayer.aow.ui.widget.circularseekbar.CircularSeekBar
                android:id="@+id/bass_boost"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lock_enabled="true"
                app:start_angle="270"
                app:end_angle="270"
                app:circle_x_radius="100dp"
                app:circle_y_radius="100dp"
                app:use_custom_radii="true"
                app:progress="0"
                android:secondaryProgress="0"
                app:max="1000"
                app:pointer_alpha_ontouch="100"
                app:pointer_color="@color/red_dim"
                app:pointer_halo_color="@color/red_light"
                app:circle_progress_color="@color/red_dim"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/reverb_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reverb"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="left"
                />
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/reverb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_text_color="@color/white"
                android:textColor="@color/white"
                app:ms_background_color="@color/red_dim"
                android:background="@color/red_dim"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/virtualizer_title_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/virtualizer"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <com.musicplayer.aow.ui.widget.circularseekbar.CircularSeekBar
                android:id="@+id/virtualizer_seekbar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lock_enabled="true"
                app:start_angle="270"
                app:end_angle="270"
                app:circle_x_radius="100dp"
                app:circle_y_radius="100dp"
                app:use_custom_radii="true"
                app:progress="0"
                android:secondaryProgress="0"
                app:max="1000"
                app:pointer_alpha_ontouch="100"
                app:pointer_color="@color/red_dim"
                app:pointer_halo_color="@color/red_light"
                app:circle_progress_color="@color/red_dim"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>

